...
            android:visibility="gone"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/main_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_main_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/ui_text_bg"
...
